# nvapi-wrapper

./: .gitmodules  CMakeLists.txt  README.md
.github/workflows/: formatting.yaml
src/nvapiwrapper/: fixednvapi.h  nvapiheaders.h  nvapiwrapper.cpp  nvapiwrapper.h
