#----------------------------------------------------------------------------------------------------------------------
# Header files
#----------------------------------------------------------------------------------------------------------------------

set(HEADERS
    src/nvapidrssession.h
    src/nvapiwrapper.h
    )

#----------------------------------------------------------------------------------------------------------------------
# Source files
#----------------------------------------------------------------------------------------------------------------------

set(SOURCES
    src/nvapidrssession.cpp
    src/nvapiwrapper.cpp
    )

#----------------------------------------------------------------------------------------------------------------------
# Target config
#----------------------------------------------------------------------------------------------------------------------

add_library(nvapi-wrapper ${HEADERS} ${SOURCES})
target_include_directories(nvapi-wrapper PUBLIC ${CMAKE_SOURCE_DIR}/externals)
